Change .svg icon, add .iges

--- a/conf/polyfonia.conf
+++ b/conf/polyfonia.conf
@@ -79,9 +79,9 @@ AddIcon /.polyfonia/icons/faenza/image-gif.svg                           .gif
 AddIcon /.polyfonia/icons/faenza/image-tiff.svg                          .tiff .tif
 AddIcon /.polyfonia/icons/faenza/image-x-ico.svg                         .ico
 AddIcon /.polyfonia/icons/faenza/image-x-eps.svg                         .ai
-AddIcon /.polyfonia/icons/faenza/x-office-drawing.svg                    .eps
+AddIcon /.polyfonia/icons/faenza/x-office-drawing.svg                    .eps .svg
 AddIcon /.polyfonia/icons/faenza/image-x-psd.svg                         .psd
-AddIcon /.polyfonia/icons/faenza/image-x-generic.svg                     .webp .svg
+AddIcon /.polyfonia/icons/faenza/image-x-generic.svg                     .webp 
 
 AddIcon /.polyfonia/icons/faenza/audio-x-mpeg.svg                        .mp3 .mpga .mp2 .mp2a .m2a .m3a
 AddIcon /.polyfonia/icons/faenza/audio-x-wav.svg                         .wav
@@ -103,7 +103,7 @@ AddIcon /.polyfonia/icons/faenza/flash.svg                               .swf
 
 AddIcon /.polyfonia/icons/faenza/extension.svg                           .xpi
 
-AddIcon /.polyfonia/icons/flaticons/shape-cube.png                       .stl
+AddIcon /.polyfonia/icons/flaticons/shape-cube.png                       .stl .iges
 
 AddIcon /.polyfonia/icons/faenza/vcalendar.svg                           .vcs .ics 
 AddIcon /.polyfonia/icons/faenza/user-info.svg                           .vcf
